--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -328,6 +328,7 @@
         align-self: center;
         border: 0.17rem solid hsla(210, 30%, 50%, 0.263); 
         box-shadow: 0.6rem 0.6rem 1rem rgba(0, 155, 155, 0.5), inset 0 0 0.5rem rgba(0, 155, 155, 0.5);
+        cursor: pointer;
         overflow: hidden;
         transition: transform 0.3s;
       }
